unpackaged/main/default/objects/OpportunityModuleItem__c/OpportunityModuleItem__c.object-meta.xml
<CustomObject>
    <description>Module Items from SRS Price Book</description>
    <label>Opportunity Module Item</label>
    <nameField>
        <label>OpportunityModule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Module Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>