unpackaged/main/default/objects/OpportunityModuleItem__c/fields/BookPrice__c.field-meta.xml
<CustomField>
    <fullName>BookPrice__c</fullName>
    <description>Book Price</description>
    <label>Book Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>