unpackaged/main/default/objects/OpportunityModuleItem__c/fields/Licences__c.field-meta.xml
<CustomField>
    <fullName>Licences__c</fullName>
    <description>Licences</description>
    <label>Licences</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>