unpackaged/main/default/objects/OpportunityModuleItem__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>read only permission for end users</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunity Module Items</relationshipLabel>
    <relationshipName>Opportunity_Module_Items</relationshipName>
    <type>Lookup</type>
</CustomField>