unpackaged/main/default/objects/OpportunityModuleItem__c/fields/Product_Manager__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager__c</fullName>
    <formula>Product2__r.Product_Manager__c</formula>
    <label>Product Manager</label>
    <type>Text</type>
</CustomField>