unpackaged/main/default/objects/OpportunityModuleItem__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>TEXT(Product2__r.GL_Product_Name__c)</formula>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>