unpackaged/main/default/objects/OpportunityModuleItem__c/fields/Solution_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Solution_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if the product or module is part of the solution.</description>
    <label>Solution Indicator</label>
    <type>Checkbox</type>
</CustomField>