unpackaged/main/default/objects/OpportunityModuleItem__c/fields/Solution_Name__c.field-meta.xml
<CustomField>
    <fullName>Solution_Name__c</fullName>
    <description>Solution Template Name from SRS Price Book</description>
    <label>Solution Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>